--- a/trunk/web/eng/projeler/masaustu/kaptan/index.html
+++ b/trunk/web/eng/projeler/masaustu/kaptan/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-	<title>:: ulusal dağıtım project :: tübitak-uekae ::</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../../../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../../../images/favicon.ico">
+  <title>:: ulusal dağıtım project :: t&uuml;bitak-uekae ::</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link href="../../../../stil.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" type="image/x-icon"
+ href="../../../../images/favicon.ico">
 </head>
-
 <body class="arka">
-<table class="arkayan" width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="878" align="center" valign="top">
-<table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="800" valign="top">
-
+<table class="arkayan" align="center" border="0" cellpadding="0"
+ cellspacing="0" width="800">
+  <tbody>
+    <tr>
+      <td align="center" valign="top" width="878">
+      <table class="arkadalga" align="center" cellpadding="0"
+ cellspacing="0" width="700">
+        <tbody>
+          <tr>
+            <td valign="top" width="800">
 <!-- logo -->
-<table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="620" height="60">
-<img src="../../../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
-</td>
-</tr>
-
+            <table align="center" border="0" cellpadding="0"
+ cellspacing="0" width="700">
+              <tbody>
+                <tr>
+                  <td height="60" width="620">
+                  <img src="../../../../images/header3.png"
+ alt="Ulusal Dağıtım Projesi" height="60" width="700"></td>
+                </tr>
 <!-- menüler -->
-<tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
-<p class="menubar">
-<a href="../../../index.html">Home</a>
+                <tr>
+                  <td bgcolor="#b9d0b3" height="19" valign="top"
+ width="680">
+                  <p class="menubar"><a href="../../../index.html">Home</a>
 | <a href="../../../hakkimizda.html">About</a>
 | <a href="../../../projeler/index.html">Projects</a>
 | <a href="../../../belgeler/index.html">Documents</a>
@@ -35,76 +39,73 @@
 | <a href="../../../sss.html">FAQ</a>
 | <a href="../../../iletisim.html">Contact Us</a>
 | <a href="../../../basin/index.html">Press</a>
-| <a href="../../../../index.html">Türkçe</a>
-</p>
-</tr>
-</table>
-
-<br>
-
+| <a href="../../../../index.html">T&uuml;rk&ccedil;e</a>
+                  </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <br>
 <!-- SAYFA İÇERİK BAŞI -->
-<div class="metin">
-
-<p>
-<img src="../../../images/bullet6.png" alt="nokta"
-     align="top"><span class="baslik"> Kaptan Masaüstü</span>
-</p>
-
-<p class="icmetin">
-Kaptan Masaüstü, Pardus masaüstü ilk açıldığında kullanıcıyı
-karşılayan bir yardımcı programdır. Kaptan Masaüstü, Pardus hakkında
-genel bilgiler verirken kullanıcının masaüstünü daha rahat
-kullanabilmesi için temel yapılandırma seçeneklerini de düzenler.
-</p>
-
-<br>
-
-<p>
-<img src="../../../images/bullet6.png" alt="nokta"
-     align="top"><span class="baslik"> Ekran Görüntüleri</span>
-
-<center><table class="belge" cellspacing=10><tbody>
-
-<tr>
-<td><img src="./kaptan_masaustu1.jpg"></td>
-</tr>
-<tr>
-<td><img src="./kaptan_masaustu2.jpg"></td>
-</tr>
-
-</tbody></table></center>
-</p>
-
-<p>
-<img src="../../../images/bullet6.png" alt="nokta" align="top"><span class="baslik"> Kodlar</span>
-</p>
-
-<p class="icmetin">
-<a href="http://svn.uludag.org.tr/uludag/trunk/kaptan">http://svn.uludag.org.tr/uludag/trunk/kaptan</a>
-</p>
-
-</div>
+            <div class="metin">
+            <p><img src="../../../images/bullet6.png" alt="nokta"
+ align="top"><span class="baslik"> Kaptan Desktop</span>
+            </p>
+            <p class="icmetin">
+Kaptan Desktop is an application program which helps to users when
+Pardus
+desktop enviroment works for the first time. While Kaptan giving the
+general information about
+Pardus, program also will set some default configuration for a better
+desktop.
+            </p>
+            <br>
+            <p>
+            <img src="../../../images/bullet6.png" alt="nokta"
+ align="top"><span class="baslik"> Screenshots</span>
+            </p>
+            <center>
+            <table class="belge" cellspacing="10">
+              <tbody>
+                <tr>
+                  <td><img src="./kaptan_masaustu1.jpg"></td>
+                </tr>
+                <tr>
+                  <td><img src="./kaptan_masaustu2.jpg"></td>
+                </tr>
+              </tbody>
+            </table>
+            </center>
+            <p></p>
+            <p>
+            <img src="../../../images/bullet6.png" alt="nokta"
+ align="top"><span class="baslik"> Codes</span>
+            </p>
+            <p class="icmetin">
+            <a href="http://svn.uludag.org.tr/uludag/trunk/kaptan">http://svn.uludag.org.tr/uludag/trunk/kaptan</a>
+            </p>
+            </div>
 <!-- SAYFA İÇERİK SONU -->
-
-<!-- yayın hakkı -->
-<br>
-<br>
-<p class="not">
-Information and documents on Uludağ Project web pages can be used freely anywhere with original source credit.
-<em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-For information and suggestion(s) please write to <a href="mailto:bilgi at uludag.org.tr">bilgi
+<!-- yayın hakkı --><br>
+            <br>
+            <p class="not">
+Information and documents on Uludağ Project web pages can be used
+freely anywhere with original source credit.
+            <em><br>
+            <strong>T&Uuml;BİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli
+- T&uuml;rkiye.</strong></em>
+For information and suggestion(s) please write to <a
+ href="mailto:bilgi%20at%20uludag.org.tr">bilgi
 at uludag.org.tr</a>
-</p>
-<br>
-
-</td>
-</tr>
+            </p>
+            <br>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      </td>
+    </tr>
+  </tbody>
 </table>
-
-</td>
-</tr>
-</table>
-
 </body>
 </html>
