--- a/web/eng/belgeler/index.html
+++ b/web/eng/belgeler/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-	<title>:: ulusal dağıtım project :: tübitak-uekae ::</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico">
+  <title>:: ulusal dağıtım project :: t&uuml;bitak-uekae ::</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link href="../../stil.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" type="image/x-icon"
+ href="../../images/favicon.ico">
 </head>
-
 <body class="arka">
-<table class="arkayan" width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="878" align="center" valign="top">
-<table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="800" valign="top">
-
+<table class="arkayan" align="center" border="0" cellpadding="0"
+ cellspacing="0" width="800">
+  <tbody>
+    <tr>
+      <td align="center" valign="top" width="878">
+      <table class="arkadalga" align="center" cellpadding="0"
+ cellspacing="0" width="700">
+        <tbody>
+          <tr>
+            <td valign="top" width="800">
 <!-- logo -->
-<table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="620" height="60">
-<img src="../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
-</td>
-</tr>
-
+            <table align="center" border="0" cellpadding="0"
+ cellspacing="0" width="700">
+              <tbody>
+                <tr>
+                  <td height="60" width="620">
+                  <img src="../../images/header3.png"
+ alt="Ulusal Dağıtım Project" height="60" width="700"></td>
+                </tr>
 <!-- menüler -->
-<tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
-<p class="menubar">
-<a href="../index.html">Home</a>
+                <tr>
+                  <td bgcolor="#b9d0b3" height="19" valign="top"
+ width="680">
+                  <p class="menubar"><a href="../index.html">Home</a>
 | <a href="../hakkimizda.html">About</a>
 | <a href="../projeler/index.html">Projects</a>
 | <a href="../belgeler/index.html">Documents</a>
@@ -35,88 +39,100 @@
 | <a href="../sss.html">FAQ</a>
 | <a href="../iletisim.html">Contact Us</a>
 | <a href="../basin/index.html">Press</a>
-| <a href="../../index.html">Türkçe</a>
-</p>
-</tr>
-</table>
-
-<br>
-
+| <a href="../../index.html">T&uuml;rk&ccedil;e</a>
+                  </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <br>
 <!-- SAYFA İÇERİK BAŞI -->
-<center><table class="belge" cellspacing=10>
-  <tbody>
-
-<tr>
-<td align="left" class="metin"><b>Proje Ana Sözleşmesi</b> (25/02/2005)</td>
-<td class="menubar"><a href="./sozlesme/index.html">HTML</a></td>
-<td class="menubar"><a href="./sozlesme/sozlesme.html">HTML (tek sayfa)</a></td>
-<td class="menubar"><a href="./sozlesme/sozlesme.pdf">PDF (9 KB)</a></td>
-</tr>
-
-<tr>
-<td align="left" class="metin"><b>Bilişim Okur Yazarı</b> (04/11/2004)</td>
-<td class="menubar"><a href="./okuryazar/index.html">HTML</a></td>
-<td class="menubar"><a href="./okuryazar/okuryazar.html">HTML (tek sayfa)</a></td>
-<td class="menubar"><a href="./okuryazar/okuryazar.pdf">PDF (11 KB)</a></td>
-</tr>
-
-<tr>
-<td align="left" class="metin"><b>Temel Masaüstü İhtiyaçları</b> (04/11/2004)</td>
-<td class="menubar"><a href="./masaustu/index.html">HTML</a></td>
-<td class="menubar"><a href="./masaustu/masaustu.html">HTML (tek sayfa)</a></td>
-<td class="menubar"><a href="./masaustu/masaustu.pdf">PDF (17 KB)</a></td>
-</tr>
-
-<tr>
-<td align="left" class="metin"><b>Nasıl Yardım Ederim (Kalite)</b> (25/02/2005)</td>
-<td class="menubar"><a href="./kalite/index.html">HTML</a></td>
-<td class="menubar"><a href="./kalite/kalite.html">HTML (tek sayfa)</a></td>
-<td class="menubar"><a href="./kalite/kalite.pdf">PDF (33 KB)</a></td>
-</tr>
-
-<tr>
-<td align="left" class="metin"><b>Yeni Geliştirici Klavuzu</b> (25/02/2005)</td>
-<td class="menubar"><a href="./gelistirici/index.html">HTML</a></td>
-<td class="menubar"><a href="./gelistirici/gelistirici.html">HTML (tek sayfa)</a></td>
-<td class="menubar"><a href="./gelistirici/gelistirici.pdf">PDF (105 KB)</a></td>
-</tr>
-
-<tr>
-<td align="left" class="metin"><b>Neden LyX?</b> (25/02/2005)</td>
-<td class="menubar"><a href="./nedenlyx/index.html">HTML</a></td>
-<td class="menubar"><a href="./nedenlyx/nedenlyx.html">HTML (tek sayfa)</a></td>
-<td class="menubar"><a href="./nedenlyx/nedenlyx.pdf">PDF (19 KB)</a></td>
-</tr>
-
-<tr>
-<td colspan="4">
-Teknik belgelerimize, projeler sayfasından ait oldukları projelere
-giderek ulaşabilirsiniz.
-</td>
-</tr>
-
-</tbody></table></center>
+            <center>
+            <table class="belge" cellspacing="10">
+              <tbody>
+                <tr>
+                  <td class="metin" align="left"><b>Project Main
+Contract</b> (25/02/2005)</td>
+                  <td class="menubar"><a href="./sozlesme/index.html">HTML</a></td>
+                  <td class="menubar"><a href="./sozlesme/sozlesme.html">HTML
+(one page)</a></td>
+                  <td class="menubar"><a href="./sozlesme/sozlesme.pdf">PDF
+(9 KB)</a></td>
+                </tr>
+                <tr>
+                  <td class="metin" align="left"><b>Computer Literate
+Users</b> (04/11/2004)</td>
+                  <td class="menubar"><a href="./okuryazar/index.html">HTML</a></td>
+                  <td class="menubar"><a
+ href="./okuryazar/okuryazar.html">HTML (one page)</a></td>
+                  <td class="menubar"><a
+ href="./okuryazar/okuryazar.pdf">PDF (11 KB)</a></td>
+                </tr>
+                <tr>
+                  <td class="metin" align="left"><span
+ style="font-weight: bold;">Basic desktop needs</span> (04/11/2004)</td>
+                  <td class="menubar"><a href="./masaustu/index.html">HTML</a></td>
+                  <td class="menubar"><a href="./masaustu/masaustu.html">HTML
+(one page)</a></td>
+                  <td class="menubar"><a href="./masaustu/masaustu.pdf">PDF
+(17 KB)</a></td>
+                </tr>
+                <tr>
+                  <td class="metin" align="left"><b>How can I help
+(Quality)</b> (25/02/2005)</td>
+                  <td class="menubar"><a href="./kalite/index.html">HTML</a></td>
+                  <td class="menubar"><a href="./kalite/kalite.html">HTML
+(one page)</a></td>
+                  <td class="menubar"><a href="./kalite/kalite.pdf">PDF
+(33 KB)</a></td>
+                </tr>
+                <tr>
+                  <td class="metin" align="left"><b>New Developer's
+Guide</b> (25/02/2005)</td>
+                  <td class="menubar"><a href="./gelistirici/index.html">HTML</a></td>
+                  <td class="menubar"><a
+ href="./gelistirici/gelistirici.html">HTML (one page)</a></td>
+                  <td class="menubar"><a
+ href="./gelistirici/gelistirici.pdf">PDF (105 KB)</a></td>
+                </tr>
+                <tr>
+                  <td class="metin" align="left"><b>Why LyX?</b>
+(25/02/2005)</td>
+                  <td class="menubar"><a href="./nedenlyx/index.html">HTML</a></td>
+                  <td class="menubar"><a href="./nedenlyx/nedenlyx.html">HTML
+(one page)</a></td>
+                  <td class="menubar"><a href="./nedenlyx/nedenlyx.pdf">PDF
+(19 KB)</a></td>
+                </tr>
+                <tr>
+                  <td colspan="4">
+You can reach to technical papers from our projects page.
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            </center>
 <!-- SAYFA İÇERİK SONU -->
-
-<!-- yayın hakkı -->
-<br>
-<br>
-<p class="not">
-Information and documents on Uludağ Project web pages can be used freely anywhere with original source credit.
-<em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-For information and suggestion(s) please write to <a href="mailto:bilgi at uludag.org.tr">bilgi
+<!-- yayın hakkı --><br>
+            <br>
+            <p class="not">
+Information and documents on Uludağ Project web pages can be used
+freely anywhere with original source credit.
+            <em><br>
+            <strong>T&Uuml;BİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli
+- T&uuml;rkiye.</strong></em>
+For information and suggestion(s) please write to <a
+ href="mailto:bilgi%20at%20uludag.org.tr">bilgi
 at uludag.org.tr</a>
-</p>
-<br>
-
-</td>
-</tr>
+            </p>
+            <br>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      </td>
+    </tr>
+  </tbody>
 </table>
-
-</td>
-</tr>
-</table>
-
 </body>
 </html>
